@@ -1,5 +1,8 @@
 0.23.3	UNRELEASED
 
+ * Add support for ``-a`` argument to
+   ``dulwich.cli.commit``. (Jelmer Vernooĳ)
+
  * Add support for merge drivers.
    (Jelmer Vernooĳ)
 
